--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -3,6 +3,19 @@
   port 24224
 </source>
 
+<source>
+      @type prometheus
+</source>
+
+<source>
+      @type prometheus_monitor
+</source>
+
+<source>
+      @type prometheus_output_monitor
+</source>
+
+
 <match @FLUENT_LOG>
   @type stdout
 </match>
@@ -11,15 +24,27 @@
   @type copy
   <store>
         @type elasticsearch
-        default_elasticsearch_version 7
+        #default_elasticsearch_version 7
         host "#{ENV['ES_HOST']}"
         port 9200
         reconnect_on_error true
+        #suppress_type_name true #elastic 7.x: [types removal] Specifying types in bulk requests is deprecated
         <buffer>
                 flush_interval 5s
         </buffer>
         logstash_format false
-        index_name "test"
+        index_name myindex
+  </store>
+  <store>
+        @type prometheus
+        <metric>
+              name fluentd_output_status_num_records_total
+              type counter
+              desc The total number of outgoing records
+              <labels>
+                    tag ${tag}
+              </labels>
+        </metric>
   </store>
 </match>
 
