--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.4'
 services:
   elasticsearch1:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.8.1
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.9
     environment:
       - node.name=elasticsearch1
       - cluster.name=docker-cluster
-      - cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3 #7.x
+      #- cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3 #7.x
       - bootstrap.memory_lock=true
       - node.master=true
       - node.data=true
@@ -27,11 +27,11 @@ services:
       - elastic
 
   elasticsearch2:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.8.1
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.9
     environment:
       - node.name=elasticsearch2
       - cluster.name=docker-cluster
-      - cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3 #7.x
+      #- cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3 #7.x
       - bootstrap.memory_lock=true
       - node.master=true
       - node.data=true
@@ -53,11 +53,11 @@ services:
       - elastic
 
   elasticsearch3:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.8.1
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.9
     environment:
       - node.name=elasticsearch3
       - cluster.name=docker-cluster
-      - cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3 #7.x
+      #- cluster.initial_master_nodes=elasticsearch1,elasticsearch2,elasticsearch3 #7.x
       - bootstrap.memory_lock=true
       - node.master=true
       - node.data=true
@@ -79,7 +79,7 @@ services:
       - elastic
 
   kibana:
-    image: docker.elastic.co/kibana/kibana-oss:7.8.1
+    image: docker.elastic.co/kibana/kibana-oss:6.8.9
     environment:
       SERVER_NAME: kibana
       ELASTICSEARCH_URL: http://haproxy:9200/
@@ -96,6 +96,8 @@ services:
     restart: always
     environment:
       ES_HOST: elasticsearch1
+    ports:
+      - 24231:24231
     volumes:
     - ${PWD}/fluentd/fluent.conf:/fluentd/etc/fluent.conf
     networks:
@@ -108,6 +110,8 @@ services:
     restart: always
     environment:
       ES_HOST: elasticsearch2
+    ports:
+      - 24232:24231
     volumes:
     - ${PWD}/fluentd/fluent.conf:/fluentd/etc/fluent.conf
     networks:
@@ -120,6 +124,8 @@ services:
     restart: always
     environment:
       ES_HOST: elasticsearch3
+    ports:
+      - 24233:24231
     volumes:
     - ${PWD}/fluentd/fluent.conf:/fluentd/etc/fluent.conf
     networks:
