--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -7,7 +7,8 @@ USER root
 # you may customize including plugins as you wish
 RUN apk add --no-cache --update --virtual .build-deps \
         sudo build-base ruby-dev \
- && sudo gem install fluent-plugin-elasticsearch \
+ && sudo gem install fluent-plugin-elasticsearch -v 4.1.1 \
+ && sudo gem install  fluent-plugin-prometheus -v 1.8.2 \
  && sudo gem sources --clear-all \
  && apk del .build-deps \
  && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
